--- a/AboutUs.html
+++ b/AboutUs.html
@@ -29,7 +29,7 @@
 
 	
 		<header>
-			<img src="Assets/Images/logo.png" alt="Cruz Landscaping" />
+			<img src="Assets/images/logo.png" alt="Cruz Landscaping" />
 		</header>
 		
 		 <nav class="Horizontal">
